--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
+    "react-input-slider": "^6.0.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-swipe-button": "^1.0.1",
     "redux": "^4.2.1",
+    "sass": "^1.58.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
