--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-credit-card-input": "^1.1.5",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-input-slider": "^6.0.1",
