--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
@@ -26,6 +27,7 @@
     "sass": "^1.58.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
+
   },
   "scripts": {
     "start": "react-scripts start",
